--- a/profile-details.html
+++ b/profile-details.html
@@ -45,8 +45,8 @@
           />
         </div>
         <div class="profile-info">
-          <h1 class="profile-name">Anshul Ojha</h1>
-          <p class="profile-email">dummy@gmail.com</p>
+          <h1 class="profile-name">Sricharan</h1>
+          <p class="profile-email">sri@gmail.com</p>
           <div class="membership-info">
             <span class="membership-badge">Premium</span>
             <span class="membership-details">4K + HDR</span>
